@@ -1,9 +1,13 @@
 package com.ds.user.application.controllers.v1;
 
-import com.ds.user.app_context.models.User;
-import com.ds.user.common.entities.dto.*;
+import com.ds.user.common.entities.base.User;
+import com.ds.user.common.entities.common.BaseResponse;
+import com.ds.user.common.entities.common.PagingRequest;
+import com.ds.user.common.entities.common.paging.PagedData;
 import com.ds.user.common.entities.dto.auth.SyncUserRequest;
-import com.ds.user.common.entities.dto.common.BaseResponse;
+import com.ds.user.common.entities.dto.user.CreateUserRequest;
+import com.ds.user.common.entities.dto.user.UpdateUserRequest;
+import com.ds.user.common.entities.dto.user.UserDto;
 import com.ds.user.common.interfaces.IUserService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -15,8 +19,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * REST API Controller for User Management
@@ -30,10 +34,10 @@ public class UserController {
 
     private final IUserService userService;
 
-    @PostMapping
+    @PostMapping("/create")
     @Operation(summary = "Create a new user")
     public ResponseEntity<BaseResponse<UserDto>> createUser(@Valid @RequestBody CreateUserRequest request) {
-        log.info("POST /api/v1/users - Create user: username={}", request.getUsername());
+        log.info("POST /api/v1/users/create - Create user: username={}", request.getUsername());
         
         User user = User.builder()
                 .keycloakId(request.getKeycloakId())
@@ -57,14 +61,43 @@ public class UserController {
 
     @GetMapping("/{id}")
     @Operation(summary = "Get user by ID")
-    public ResponseEntity<BaseResponse<UserDto>> getUser(@PathVariable UUID id) {
+    public ResponseEntity<BaseResponse<UserDto>> getUser(@PathVariable String id) {
         log.info("GET /api/v1/users/{} - Get user by ID", id);
         
-        return userService.getUser(id)
-                .map(user -> ResponseEntity.ok(BaseResponse.success(UserDto.from(user))))
-                .orElse(ResponseEntity
+        try {
+            UUID userId = parseUserId(id);
+            log.debug("Parsed user ID: {} -> {}", id, userId);
+            
+            Optional<User> userOpt = userService.getUser(userId);
+            if (userOpt.isPresent()) {
+                User user = userOpt.get();
+                UserDto dto = UserDto.from(user);
+                log.info("Found user: {} with ID: {} (original request: {})", user.getUsername(), user.getId(), id);
+                return ResponseEntity.ok(BaseResponse.success(dto));
+            } else {
+                log.warn("User not found with ID: {} (original request: {})", userId, id);
+                return ResponseEntity
                         .status(HttpStatus.NOT_FOUND)
-                        .body(BaseResponse.error("User not found")));
+                        .body(BaseResponse.error("User not found"));
+            }
+        } catch (Exception e) {
+            log.error("Unexpected error getting user with ID {}: {}", id, e.getMessage(), e);
+            return ResponseEntity
+                    .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(BaseResponse.error("Internal server error: " + e.getMessage()));
+        }
+    }
+
+    @GetMapping("/me")
+    @Operation(summary = "Get current user")
+    public ResponseEntity<BaseResponse<UserDto>> getCurrentUser() {
+        log.info("GET /api/v1/users/me - Get current user");
+        
+        // This endpoint would typically extract user info from JWT token
+        // For now, we'll return a placeholder response
+        return ResponseEntity
+                .status(HttpStatus.NOT_IMPLEMENTED)
+                .body(BaseResponse.error("Current user endpoint not implemented"));
     }
 
     @GetMapping("/username/{username}")
@@ -79,48 +112,103 @@ public class UserController {
                         .body(BaseResponse.error("User not found")));
     }
 
-    @GetMapping
-    @Operation(summary = "Get all users")
-    public ResponseEntity<BaseResponse<List<UserDto>>> listUsers() {
-        log.info("GET /api/v1/users - Get all users");
+    @PostMapping
+    @Operation(summary = "Get all users with advanced filtering and sorting")
+    public ResponseEntity<BaseResponse<PagedData<UserDto>>> getUsers(@Valid @RequestBody PagingRequest query) {
+        log.info("POST /api/v1/users - Get users with advanced filtering and sorting");
+        log.debug("Query payload: {}", query);
         
-        List<UserDto> users = userService.listUsers()
-                .stream()
-                .map(UserDto::from)
-                .collect(Collectors.toList());
-        
-        return ResponseEntity.ok(BaseResponse.success(users));
+        try {
+            // Get users using the service
+            PagedData<User> userPage = userService.getUsers(query);
+            
+            // Convert to PagedData<UserDto>
+            List<UserDto> userDtos = userPage.getData().stream()
+                    .map(UserDto::from)
+                    .toList();
+            
+            // Use the existing paging from userPage
+            PagedData<UserDto> pagedData = PagedData.<UserDto>builder()
+                    .data(userDtos)
+                    .page(userPage.getPage())
+                    .build();
+            
+            return ResponseEntity.ok(BaseResponse.success(pagedData));
+            
+        } catch (Exception e) {
+            log.error("Error searching users: {}", e.getMessage(), e);
+            return ResponseEntity
+                    .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(BaseResponse.error("Search failed: " + e.getMessage()));
+        }
     }
+
 
     @PutMapping("/{id}")
     @Operation(summary = "Update a user")
     public ResponseEntity<BaseResponse<UserDto>> updateUser(
-            @PathVariable UUID id, 
+            @PathVariable String id, 
             @Valid @RequestBody UpdateUserRequest request) {
         log.info("PUT /api/v1/users/{} - Update user", id);
         
-        User user = User.builder()
-                .email(request.getEmail())
-                .firstName(request.getFirstName())
-                .lastName(request.getLastName())
-                .phone(request.getPhone())
-                .address(request.getAddress())
-                .identityNumber(request.getIdentityNumber())
-                .status(request.getStatus())
-                .build();
-        
-        User updated = userService.updateUser(id, user);
-        UserDto dto = UserDto.from(updated);
-        
-        return ResponseEntity.ok(BaseResponse.success(dto, "User updated successfully"));
+        try {
+            UUID userId = parseUserId(id);
+            User user = User.builder()
+                    .email(request.getEmail())
+                    .firstName(request.getFirstName())
+                    .lastName(request.getLastName())
+                    .phone(request.getPhone())
+                    .address(request.getAddress())
+                    .identityNumber(request.getIdentityNumber())
+                    .status(request.getStatus())
+                    .build();
+            
+            User updated = userService.updateUser(userId, user);
+            UserDto dto = UserDto.from(updated);
+            
+            return ResponseEntity.ok(BaseResponse.success(dto, "User updated successfully"));
+        } catch (IllegalArgumentException e) {
+            log.error("Invalid user ID format: {} - Error: {}", id, e.getMessage());
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .body(BaseResponse.error("Invalid user ID format. Expected UUID or numeric ID."));
+        }
     }
 
     @DeleteMapping("/{id}")
     @Operation(summary = "Delete a user")
-    public ResponseEntity<BaseResponse<Void>> deleteUser(@PathVariable UUID id) {
+    public ResponseEntity<BaseResponse<Void>> deleteUser(@PathVariable String id) {
         log.info("DELETE /api/v1/users/{} - Delete user", id);
-        userService.deleteUser(id);
-        return ResponseEntity.ok(BaseResponse.success(null, "User deleted successfully"));
+        
+        try {
+            UUID userId = parseUserId(id);
+            userService.deleteUser(userId);
+            return ResponseEntity.ok(BaseResponse.success(null, "User deleted successfully"));
+        } catch (IllegalArgumentException e) {
+            log.error("Invalid user ID format: {} - Error: {}", id, e.getMessage());
+            return ResponseEntity
+                    .status(HttpStatus.BAD_REQUEST)
+                    .body(BaseResponse.error("Invalid user ID format. Expected UUID or numeric ID."));
+        }
+    }
+
+    /**
+     * Parse user ID from string, handling both UUID and numeric formats
+     */
+    private UUID parseUserId(String id) throws IllegalArgumentException {
+        try {
+            return UUID.fromString(id);
+        } catch (IllegalArgumentException e) {
+            // If not a valid UUID, try to handle as numeric ID
+            try {
+                int numericId = Integer.parseInt(id);
+                // Convert numeric ID to a predictable UUID format
+                // This is a temporary solution for legacy numeric IDs
+                return UUID.fromString(String.format("00000000-0000-0000-0000-%012d", numericId));
+            } catch (NumberFormatException ex) {
+                throw new IllegalArgumentException("Invalid user ID format. Expected UUID or numeric ID.");
+            }
+        }
     }
 
     @PostMapping("/sync")
